# btrfs-mini

./: .gitignore  CMakeLists.txt  READEME.md  README.md
app/: main.cpp
include/fs/: Arquivo.h  BtrfsBloco.h  BtrfsKey.h  BtrfsNo.h  Diretorio.h  DiscoVirtual.h  GerenciadorArvoreB.h  GerenciadorDeInodes.h  Inode.h  MapaDeBits.h  SistemaDeArquivos.h  Superbloco.h
src/: Arquivo.cpp  Diretorio.cpp  DiscoVirtualEmMemoria.cpp  DiscoVirtualEmMemoria.h  GerenciadorArvoreB.cpp  MapaDeBits.cpp  SistemaDeArquivos.cpp
